# klarity-mcp

./: .mcp.json  NOTICE  README.md  gemini-extension.json  pyproject.toml
.claude-plugin/: plugin.json
klarity_mcp/: __init__.py  __main__.py  builders.py  cli.py  metadata.py
skills/klarity-architect/: SKILL.md  tools.md
tests/: test_packaging.py
