[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klarity-mcp-factory"
version = "0.0.0"
description = "Manifest factory for Klarity MCP plugin distribution (Claude Code plugin + Gemini CLI extension)."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [
    { name = "Klarity Intelligence, Inc.", email = "hello@klarity.ai" },
]
keywords = ["klarity", "mcp", "claude-code", "gemini-cli", "plugin"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.urls]
Homepage = "https://www.klarity.ai/"
Repository = "https://github.com/Klarity-AI/klarity-mcp"

[project.scripts]
klarity-mcp-generate = "klarity_mcp.cli:main"

[tool.setuptools.packages.find]
include = ["klarity_mcp*"]
exclude = ["tests*"]
